# smithed-python

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  todos.md
.github/workflows/: main.yml  static.yml
abba/: beet.yaml
app/: index.html  main.py
app/.streamlit/: config.toml
app/pages/: preview.py
examples/basic/pack2/: pack.mcmeta
examples/basic/pack3/: pack.mcmeta
examples/basic_plugins/custom/: pack.mcmeta
examples/basic_plugins/fancy_bats/: pack.mcmeta
examples/basic_plugins/tasty_tacos/: pack.mcmeta
examples/bats/gm4_bat_grenades/: pack.mcmeta
examples/conditions/fail/: pack.mcmeta
examples/conditions/fail2/: pack.mcmeta
examples/conditions/main/: pack.mcmeta
examples/conditions/pass/: pack.mcmeta
examples/duplicates/original/: pack.mcmeta
examples/empty/pack2/: pack.mcmeta
examples/fancyPants/: README.md
examples/fancyPants/Default/: pack.mcmeta
examples/fancyPants/Fire/: pack.mcmeta
examples/fancyPants/Ice/: pack.mcmeta
examples/override/pack1/: pack.mcmeta
examples/override/pack2/: pack.mcmeta
examples/override/pack3/: pack.mcmeta
examples/override_global/pack1/: pack.mcmeta
examples/rules/append/: pack.mcmeta
examples/rules/insert/: pack.mcmeta
examples/rules/merge/: pack.mcmeta
examples/rules/prepend/: pack.mcmeta
examples/rules/remove/: pack.mcmeta
examples/rules/replace/: pack.mcmeta
examples/simple_priority/pack1/: pack.mcmeta
examples/simple_priority/pack2/: pack.mcmeta
examples/simple_priority/pack3/: pack.mcmeta
examples/stages/a_late/: pack.mcmeta
examples/stages/pack1/: pack.mcmeta
examples/stages/pack2/: pack.mcmeta
examples/stages/z_early/: pack.mcmeta
smithed/: __init__.py  theming.py  type.py  utils.py
smithed/cli/: __init__.py  __main__.py  cli.py  types.py
smithed/weld/: __init__.py  __main__.py  app.py  cli.py  commands.py  errors.py  fabric.mod.json.j2  latest_snapshot.py  main.py  merge_policies.py  models.py  parse.py
tests/: test_examples.py  test_output.py
tests/snapshots/: examples__build_basic__0.pack.md  examples__build_basic_bats__0.pack.md  examples__build_basic_plugins__0.pack.md  examples__build_bats__0.pack.md  examples__build_conditions__0.pack.md  examples__build_directory1__0.pack.md  examples__build_duplicates__0.pack.md  examples__build_empty__0.pack.md  examples__build_exact_duplicates__0.pack.md  examples__build_fancyPants__0.pack.md  examples__build_override__0.pack.md  examples__build_override_global__0.pack.md  examples__build_quoted_and_minecraft_keys__0.pack.md  examples__build_rules__0.pack.md  examples__build_simple_priority__0.pack.md  examples__build_snapshot__0.pack.md  examples__build_stages__0.pack.md
(+69 files in other folders)
