[tool.poetry]
name = "smithed"
version = "0.7.1"
description = "Smithed's Python client with CLI, weld and more"
authors = ["Smithed Team <team@smithed.dev>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "weld"
from = "smithed"

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.82.1"
mecha = "^0.59.2"
click = "^8.1.3"
jsonpath-ng = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
python-semantic-release = "^7.32.2"
devtools = "^0.10.0"
pytest = "^7.2.0"
pytest-insta = "^0.2.0"
lectern = "^0.26.0"

[tool.poetry.group.app.dependencies]
streamlit = "^1.16.0"

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.poetry.scripts]
weld = 'weld.commands:weld'

[tool.poetry.plugins.beet]
commands = "weld.commands"

[tool.semantic_release]
branch = "main"
upload_to_pypi = true
version_variable = ["smithed/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build"

[tool.pyright]
typeCheckingMode = "basic"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "beet-smithed"
suppress_warnings = ["myst.header"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
